==========
Change Log
==========

Version 3.0.0 -
---------------
- Fixed named results returned by `url` to match fields as they would be parsed
  using urllib.parse.urlparse.

- Early response to `with_line_numbers` was positive, with some requested enhancements:
  . added a trailing "<<" at the end of each line (to show presence of trailing spaces)
  . added expand_tabs argument, to control calling str.expandtabs (defaults to True
    to match parseString)
  . added mark_spaces argument to support display of a printing character in place of
    spaces, or Unicode symbols for space and tab characters
  . added mark_control argument to support highlighting of control characters using
    '.' or Unicode symbols, such as "␍" and "␊".

- Modified helpers common_html_entity and replace_html_entity() to use the HTML
  entity definitions from html.entities.html5.


Version 3.0.0rc2 -
------------------
- Added `url` expression to `pyparsing_common`. (Sample code posted by Wolfgang Fahl,
  very nice!)

  This new expression has been added to the `urlExtractorNew.py` example, to show how
  it extracts URL fields into separate results names.

- Added method to `pyparsing_testing` to help debugging, `with_line_numbers`.
  Returns a string with line and column numbers corresponding to values shown
  when parsing with expr.set_debug():

      data = """\
         A
            100"""
      expr = pp.Word(pp.alphanums).set_name("word").set_debug()
      print(ppt.with_line_numbers(data))
      expr[...].parseString(data)

  prints:

                1
       1234567890
     1:   A
     2:      100
    Match word at loc 3(1,4)
         A
         ^
    Matched word -> ['A']
    Match word at loc 11(2,7)
            100
            ^
    Matched word -> ['100']

- Added new example `cuneiform_python.py` to demonstrate creating a new Unicode
  range, and writing a Cuneiform->Python transformer (inspired by zhpy).
